@@ -3,7 +3,7 @@ package org.testng.internal.listeners;
 import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 
-@Listeners(DummyListenerFactory.class)
+@Listeners(ListenerFactoryContainer.DummyListenerFactory.class)
 public class TestClassWithCompositeListener {
   @Test
   public void testMethod() {}
