@@ -1,0 +1,6 @@
+package test.listeners.issue3095;
+
+import org.testng.annotations.Listeners;
+
+@Listeners(MyTestNgFactory.class)
+public class SuperClassSample {}
